--- a/JSNews/Base.lproj/Main.storyboard
+++ b/JSNews/Base.lproj/Main.storyboard
@@ -62,6 +62,27 @@
             </objects>
             <point key="canvasLocation" x="1473" y="728"/>
         </scene>
+        <!--Web View Controller-->
+        <scene sceneID="dOQ-KK-h4c">
+            <objects>
+                <viewController storyboardIdentifier="WKWebViewController" id="qDd-sP-YuE" customClass="WKWebViewController" customModule="JSNews" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="W0j-NY-X4s"/>
+                        <viewControllerLayoutGuide type="bottom" id="2xw-gu-34Y"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7mT-nJ-40u">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="containerView" destination="7mT-nJ-40u" id="EcD-2r-MCg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dk1-i2-ZsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2207" y="728"/>
+        </scene>
         <!--Activities-->
         <scene sceneID="agk-ae-IK3">
             <objects>
@@ -82,7 +103,6 @@
         <!--Top-->
         <scene sceneID="4bq-hY-uGl">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NHX-rn-Wrx" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="UPI-iY-1Gn" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Top" image="Top" selectedImage="TopSelected" id="z4x-Pe-xRD"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vhS-Rs-Pie">
@@ -93,6 +113,7 @@
                         <segue destination="rQQ-LV-1qj" kind="relationship" relationship="rootViewController" id="f6j-FM-8BH"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NHX-rn-Wrx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="653" y="728"/>
         </scene>
